# vertexmatch

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: google_bench.cpp
data/: README.md
include/vertexmatch/: book.hpp  csv.hpp  generator.hpp  itch.hpp  metrics.hpp  rdtsc.hpp  selftest.hpp  spsc_ring.hpp  types.hpp
scripts/: plot_latency.py  profile_perf.sh
src/: baseline_book.cpp  csv.cpp  generator.cpp  itch.cpp  main.cpp  metrics.cpp  optimized_book.cpp  rdtsc.cpp  selftest.cpp
